<resources>
    <string name="app_name">GoGreen</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_register">Register new user</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="serivce_request">Serivce Request</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="sign_up">Sign up</string>
    <string name="newservicerequest">New service request</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="resolved">Resolved</string>
</resources>
