<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_serivce_request"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/serivce_request" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_faq_s"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/faq_s" />
    </group>


</menu>
